SERVER-113319 fix match pushdown when expression root is a renamed field path expression (#43893) (#44082)

GitOrigin-RevId: 459fae57bea9d433107e46a48ade8c6c8760ee51